--- a/wc/index.files/sheet002.htm
+++ b/wc/index.files/sheet002.htm
@@ -1,7 +1,9 @@
 <html>
 
 <head>
-<meta http-equiv=Content-Type content="text/html; charset=x-mac-chinesesimp">
+<meta name=æ ‡é¢˜ content="">
+<meta name=å…³é”®è¯ content="">
+<meta http-equiv=Content-Type content="text/html; charset=utf-8">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 14">
 <link id=Main-File rel=Main-File href="../index.htm">
@@ -23,7 +25,7 @@ rt
 	font-weight:400;
 	font-style:normal;
 	text-decoration:none;
-	font-family:ËÎÌå, sans-serif;
+	font-family:å®‹ä½“, sans-serif;
 	mso-font-charset:134;
 	mso-char-type:none;
 	display:none;}
@@ -38,7 +40,7 @@ rt
  collapse;table-layout:fixed;width:65pt'>
  <col class=xl73 width=65 style='width:65pt'>
  <tr height=15 style='height:15.0pt'>
-  <td height=15 class=xl73 width=65 style='height:15.0pt;width:65pt'>¡¡</td>
+  <td height=15 class=xl73 width=65 style='height:15.0pt;width:65pt'>ã€€</td>
  </tr>
 </table>
 
