--- a/wc/index.files/sheet001.htm
+++ b/wc/index.files/sheet001.htm
@@ -67,7 +67,7 @@ rt
  <col class=xl67 width=65 span=2 style='width:65pt'>
  <tr height=19 style='height:19.0pt'>
   <td height=19 class=xl66 width=197 style='height:19.0pt;width:197pt'>最后更新</td>
-  <td colspan=3 class=xl67 width=223 style='border-left:none;width:223pt'>20140616_0845</td>
+  <td colspan=3 class=xl67 width=223 style='border-left:none;width:223pt'>20140616_1246</td>
   <td class=xl67 width=66 style='border-left:none;width:66pt'>　</td>
   <td class=xl67 width=92 style='border-left:none;width:92pt'>　</td>
   <td class=xl67 width=66 style='border-left:none;width:66pt'>　</td>
@@ -135,7 +135,7 @@ rt
   <td class=xl67 style='border-top:none;border-left:none;font-size:16.0pt;
   color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
-  background:#FFC7CE;mso-pattern:black none'>-150</td>
+  background:#FFC7CE;mso-pattern:black none'>-250</td>
   <td class=xl67 style='border-top:none;border-left:none;font-size:16.0pt;
   color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
@@ -212,7 +212,7 @@ rt
   <td class=xl70 style='border-top:none;border-left:none'>500</td>
   <td class=xl70 style='border-top:none;border-left:none'>200</td>
   <td class=xl70 style='border-top:none;border-left:none'>2500</td>
-  <td class=xl70 style='border-top:none;border-left:none'>100</td>
+  <td class=xl70 style='border-top:none;border-left:none'>200</td>
   <td class=xl70 style='border-top:none;border-left:none'>200</td>
   <td class=xl70 style='border-top:none;border-left:none'>200</td>
   <td class=xl70 style='border-top:none;border-left:none'>0</td>
@@ -1200,6 +1200,23 @@ rt
   <td class=xl87 style='border-top:none;border-left:none'>327.5</td>
   <td class=xl87 style='border-top:none;border-left:none'>97.5</td>
   <td class=xl87 style='border-top:none;border-left:none'>0</td>
+ </tr>
+ <tr class=xl71 height=19 style='height:19.0pt'>
+  <td height=19 class=xl69 style='height:19.0pt;border-top:none'>入金</td>
+  <td class=xl71 style='border-top:none;border-left:none'>　</td>
+  <td class=xl71 style='border-top:none;border-left:none'>　</td>
+  <td class=xl71 style='border-top:none;border-left:none'>　</td>
+  <td class=xl71 style='border-top:none;border-left:none'>　</td>
+  <td class=xl73 style='border-top:none;border-left:none'>　</td>
+  <td class=xl71 style='border-top:none;border-left:none'>　</td>
+  <td class=xl71 style='border-top:none;border-left:none'>　</td>
+  <td class=xl73 style='border-top:none;border-left:none'>　</td>
+  <td class=xl70 style='border-top:none;border-left:none'>100</td>
+  <td class=xl71 style='border-top:none;border-left:none'>　</td>
+  <td class=xl71 style='border-top:none;border-left:none'>　</td>
+  <td class=xl71 style='border-top:none;border-left:none'>　</td>
+  <td class=xl73 style='border-top:none;border-left:none'>　</td>
+  <td class=xl70 style='border-top:none;border-left:none'>　</td>
  </tr>
 </table>
 
