--- a/wc/index.files/sheet001.htm
+++ b/wc/index.files/sheet001.htm
@@ -67,7 +67,7 @@ rt
  <col class=xl67 width=65 span=2 style='width:65pt'>
  <tr height=19 style='height:19.0pt'>
   <td height=19 class=xl66 width=197 style='height:19.0pt;width:197pt'>最后更新</td>
-  <td colspan=3 class=xl67 width=223 style='border-left:none;width:223pt'>20140616_1246</td>
+  <td colspan=3 class=xl67 width=223 style='border-left:none;width:223pt'>20140616_1755</td>
   <td class=xl67 width=66 style='border-left:none;width:66pt'>　</td>
   <td class=xl67 width=92 style='border-left:none;width:92pt'>　</td>
   <td class=xl67 width=66 style='border-left:none;width:66pt'>　</td>
@@ -1217,6 +1217,23 @@ rt
   <td class=xl71 style='border-top:none;border-left:none'>　</td>
   <td class=xl73 style='border-top:none;border-left:none'>　</td>
   <td class=xl70 style='border-top:none;border-left:none'>　</td>
+ </tr>
+ <tr height=19 style='height:19.0pt'>
+  <td height=19 class=xl66 style='height:19.0pt;border-top:none'>德国 -0.5 @1.900</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl86 style='border-top:none;border-left:none'>-100</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
  </tr>
 </table>
 
