--- a/wc/index.files/sheet001.htm
+++ b/wc/index.files/sheet001.htm
@@ -67,7 +67,7 @@ rt
  <col class=xl67 width=65 span=4 style='width:65pt'>
  <tr height=19 style='height:19.0pt'>
   <td height=19 class=xl66 width=197 style='height:19.0pt;width:197pt'>最后更新</td>
-  <td colspan=3 class=xl67 width=223 style='border-left:none;width:223pt'>20140616_2317</td>
+  <td colspan=3 class=xl67 width=223 style='border-left:none;width:223pt'>20140616_2325</td>
   <td class=xl67 width=66 style='border-left:none;width:66pt'>　</td>
   <td class=xl67 width=92 style='border-left:none;width:92pt'>　</td>
   <td class=xl67 width=66 style='border-left:none;width:66pt'>　</td>
@@ -1749,7 +1749,7 @@ rt
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl86 style='border-top:none;border-left:none'>-100</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
