--- a/wc/index.files/sheet001.htm
+++ b/wc/index.files/sheet001.htm
@@ -67,7 +67,7 @@ rt
  <col class=xl67 width=65 span=4 style='width:65pt'>
  <tr height=19 style='height:19.0pt'>
   <td height=19 class=xl66 width=197 style='height:19.0pt;width:197pt'>最后更新</td>
-  <td colspan=3 class=xl67 width=223 style='border-left:none;width:223pt'>20140617_0835</td>
+  <td colspan=3 class=xl67 width=223 style='border-left:none;width:223pt'>20140617_1251</td>
   <td class=xl67 width=66 style='border-left:none;width:66pt'>　</td>
   <td class=xl67 width=92 style='border-left:none;width:92pt'>　</td>
   <td class=xl67 width=66 style='border-left:none;width:66pt'>　</td>
@@ -111,7 +111,7 @@ rt
   <td class=xl67 style='border-top:none;border-left:none;font-size:16.0pt;
   color:#9C6500;font-weight:400;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
-  background:#FFEB9C;mso-pattern:black none'>1485</td>
+  background:#FFEB9C;mso-pattern:black none'>1985</td>
   <td class=xl67 style='border-top:none;border-left:none;font-size:16.0pt;
   color:#9C6500;font-weight:400;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
@@ -176,7 +176,7 @@ rt
   text-line-through:none;font-family:宋体;border:.5pt solid windowtext'>440</td>
   <td class=xl67 style='border-top:none;border-left:none;font-size:16.0pt;
   color:#76933C;font-weight:400;text-decoration:none;text-underline-style:none;
-  text-line-through:none;font-family:宋体;border:.5pt solid windowtext'>1685</td>
+  text-line-through:none;font-family:宋体;border:.5pt solid windowtext'>2185</td>
   <td class=xl67 style='border-top:none;border-left:none;font-size:16.0pt;
   color:#76933C;font-weight:400;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:宋体;border:.5pt solid windowtext'>1130.58</td>
@@ -1265,8 +1265,8 @@ rt
   <td class=xl78 style='border-top:none;border-left:none'>　</td>
   <td class=xl78 style='border-top:none;border-left:none'>　</td>
  </tr>
- <tr height=19 style='height:19.0pt'>
-  <td height=19 class=xl72 style='height:19.0pt;border-top:none'>20140616</td>
+ <tr height=0 style='display:none'>
+  <td class=xl72 style='border-top:none'>20140616</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
@@ -1284,8 +1284,8 @@ rt
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
  </tr>
- <tr height=19 style='height:19.0pt'>
-  <td height=19 class=xl66 style='height:19.0pt;border-top:none'>奖金</td>
+ <tr height=0 style='display:none'>
+  <td class=xl66 style='border-top:none'>奖金</td>
   <td class=xl86 style='border-top:none;border-left:none'>150</td>
   <td class=xl86 style='border-top:none;border-left:none'>150</td>
   <td class=xl86 style='border-top:none;border-left:none'>323.08</td>
@@ -1826,7 +1826,7 @@ rt
  <tr height=19 style='height:19.0pt'>
   <td height=19 class=xl66 style='height:19.0pt;border-top:none'>奖金</td>
   <td class=xl86 style='border-top:none;border-left:none'>1317.5</td>
-  <td class=xl86 style='border-top:none;border-left:none'>3612.5</td>
+  <td class=xl86 style='border-top:none;border-left:none'>4112.5</td>
   <td class=xl86 style='border-top:none;border-left:none'>1330</td>
   <td class=xl86 style='border-top:none;border-left:none'>182.5</td>
   <td class=xl86 style='border-top:none;border-left:none'>1005</td>
@@ -1845,7 +1845,7 @@ rt
  <tr class=xl83 height=19 style='height:19.0pt'>
   <td height=19 class=xl81 style='height:19.0pt;border-top:none'>小结</td>
   <td class=xl87 style='border-top:none;border-left:none'>440</td>
-  <td class=xl87 style='border-top:none;border-left:none'>1685</td>
+  <td class=xl87 style='border-top:none;border-left:none'>2185</td>
   <td class=xl87 style='border-top:none;border-left:none'>1130.58</td>
   <td class=xl87 style='border-top:none;border-left:none'>326</td>
   <td class=xl87 style='border-top:none;border-left:none'>730</td>
