--- a/wc/index.files/sheet001.htm
+++ b/wc/index.files/sheet001.htm
@@ -2489,9 +2489,9 @@ rt
   <td class=xl67 style='border-top:none;border-left:none;font-size:16.0pt;
   color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
-  background:#FFC7CE;mso-pattern:black none'>-300</td>
+  background:#FFC7CE;mso-pattern:black none'>-600</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl86 style='border-top:none;border-left:none'>-300</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl86 style='border-top:none;border-left:none'>　</td>
