--- a/wc/index.files/sheet001.htm
+++ b/wc/index.files/sheet001.htm
@@ -66,10 +66,10 @@ rt
  3968;width:93pt'>
  <col class=xl67 width=65 span=6 style='width:65pt'>
  <tr height=31 style='mso-height-source:userset;height:31.0pt'>
-  <td height=31 class=xl66 width=197 style='height:31.0pt;width:197pt'>最后更新</td>
-  <td colspan=3 class=xl99 width=223 style='border-right:.5pt solid black;
-  border-left:none;width:223pt'>20140618_2329</td>
-  <td class=xl67 width=66 style='border-left:none;width:66pt'>　</td>
+  <td colspan=2 height=31 class=xl104 width=263 style='border-right:.5pt solid black;
+  height:31.0pt;width:263pt'>最后更新</td>
+  <td colspan=3 class=xl102 width=223 style='border-right:.5pt solid black;
+  border-left:none;width:223pt'>20140618_2344</td>
   <td class=xl67 width=92 style='border-left:none;width:92pt'>　</td>
   <td class=xl67 width=66 style='border-left:none;width:66pt'>　</td>
   <td class=xl67 width=52 style='border-left:none;width:52pt'>　</td>
@@ -88,10 +88,10 @@ rt
  </tr>
  <tr class=xl68 height=15 style='height:15.0pt'>
   <td height=15 class=xl68 style='height:15.0pt;border-top:none'>　</td>
-  <td class=xl97 style='border-top:none;border-left:none'>总计</td>
-  <td class=xl68 style='border-top:none;border-left:none'>梅西</td>
-  <td class=xl68 style='border-top:none;border-left:none'>哈唯</td>
-  <td class=xl68 style='border-top:none;border-left:none'>安东内拉</td>
+  <td class=xl99 style='border-left:none'>总计</td>
+  <td class=xl100 style='border-left:none'>梅西</td>
+  <td class=xl100 style='border-left:none'>哈唯</td>
+  <td class=xl68 style='border-left:none'>安东内拉</td>
   <td class=xl68 style='border-top:none;border-left:none'>阿昆</td>
   <td class=xl68 style='border-top:none;border-left:none'>葱绿江南</td>
   <td class=xl68 style='border-top:none;border-left:none'>鲁尼</td>
@@ -2826,7 +2826,7 @@ rt
   <td class=xl76 style='border-top:none;border-left:none'>　</td>
  </tr>
  <tr class=xl76 height=0 style='display:none'>
-  <td class=xl98>比利时1-0@7.00</td>
+  <td class=xl97>比利时1-0@7.00</td>
   <td class=xl76 style='border-top:none;font-size:16.0pt;color:#9C0006;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:宋体;border:.5pt solid windowtext;background:#FFC7CE;
@@ -3048,7 +3048,7 @@ rt
   <td class=xl70 style='border-top:none;border-left:none'>800</td>
  </tr>
  <tr height=19 style='height:19.0pt'>
-  <td height=19 class=xl102 style='height:19.0pt'>西班牙-1.0@2.000</td>
+  <td height=19 class=xl98 style='height:19.0pt'>西班牙-1.0@2.000</td>
   <td class=xl67 style='border-top:none;font-size:16.0pt;color:#9C0006;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:宋体;border:.5pt solid windowtext;background:#FFC7CE;
@@ -3073,7 +3073,7 @@ rt
   <td class=xl86 style='border-top:none;border-left:none'>-800</td>
  </tr>
  <tr height=19 style='height:19.0pt'>
-  <td height=19 class=xl102 style='height:19.0pt'>西班牙-1.0@1.975</td>
+  <td height=19 class=xl98 style='height:19.0pt'>西班牙-1.0@1.975</td>
   <td class=xl67 style='border-top:none;font-size:16.0pt;color:#9C0006;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:宋体;border:.5pt solid windowtext;background:#FFC7CE;
@@ -3098,7 +3098,7 @@ rt
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
  </tr>
  <tr height=19 style='height:19.0pt'>
-  <td height=19 class=xl102 style='height:19.0pt'>西班牙-1.0@2.025</td>
+  <td height=19 class=xl98 style='height:19.0pt'>西班牙-1.0@2.025</td>
   <td class=xl67 style='border-top:none;font-size:16.0pt;color:#9C0006;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:宋体;border:.5pt solid windowtext;background:#FFC7CE;
@@ -3200,7 +3200,7 @@ rt
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
  </tr>
  <tr height=19 style='height:19.0pt'>
-  <td height=19 class=xl102 style='height:19.0pt'>西班牙3-0@12.00</td>
+  <td height=19 class=xl98 style='height:19.0pt'>西班牙3-0@12.00</td>
   <td class=xl67 style='border-top:none;font-size:16.0pt;color:#9C0006;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:宋体;border:.5pt solid windowtext;background:#FFC7CE;
@@ -3225,7 +3225,7 @@ rt
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
  </tr>
  <tr height=19 style='height:19.0pt'>
-  <td height=19 class=xl102 style='height:19.0pt'>荷兰@1.22</td>
+  <td height=19 class=xl98 style='height:19.0pt'>荷兰@1.22</td>
   <td class=xl67 style='border-top:none;font-size:16.0pt;color:#9C0006;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:宋体;border:.5pt solid windowtext;background:#FFC7CE;
@@ -3325,7 +3325,7 @@ rt
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
  </tr>
  <tr height=19 style='height:19.0pt'>
-  <td height=19 class=xl102 style='height:19.0pt'>西班牙@1.57</td>
+  <td height=19 class=xl98 style='height:19.0pt'>西班牙@1.57</td>
   <td class=xl67 style='border-top:none;font-size:16.0pt;color:#9C0006;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:宋体;border:.5pt solid windowtext;background:#FFC7CE;
@@ -3350,7 +3350,7 @@ rt
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
  </tr>
  <tr height=19 style='height:19.0pt'>
-  <td height=19 class=xl102 style='height:19.0pt'>荷兰@1.22</td>
+  <td height=19 class=xl98 style='height:19.0pt'>荷兰@1.22</td>
   <td class=xl67 style='border-top:none;font-size:16.0pt;color:#9C0006;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:宋体;border:.5pt solid windowtext;background:#FFC7CE;
@@ -3371,6 +3371,31 @@ rt
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl86 style='border-top:none;border-left:none'>-100</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+ </tr>
+ <tr height=19 style='height:19.0pt'>
+  <td height=19 class=xl66 style='height:19.0pt'>澳大利亚v荷兰 &lt; 3.0@1.850</td>
+  <td class=xl67 style='border-top:none;border-left:none;font-size:16.0pt;
+  color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
+  text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
+  background:#FFC7CE;mso-pattern:black none'>-600</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl86 style='border-top:none;border-left:none'>-600</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
  </tr>
