--- a/wc/index.files/sheet001.htm
+++ b/wc/index.files/sheet001.htm
@@ -69,7 +69,7 @@ rt
   <td colspan=2 height=31 class=xl103 width=267 style='border-right:.5pt solid black;
   height:31.0pt;width:267pt'>最后更新</td>
   <td colspan=3 class=xl100 width=223 style='border-right:.5pt solid black;
-  border-left:none;width:223pt'>20140623_0843</td>
+  border-left:none;width:223pt'>20140623_2238</td>
   <td class=xl67 width=92 style='border-left:none;width:92pt'>　</td>
   <td class=xl67 width=66 style='border-left:none;width:66pt'>　</td>
   <td class=xl67 width=52 style='border-left:none;width:52pt'>　</td>
@@ -4432,8 +4432,8 @@ rt
   <td class=xl76 style='border-top:none;border-left:none'>　</td>
   <td class=xl76 style='border-top:none;border-left:none'>　</td>
  </tr>
- <tr height=19 style='height:19.0pt'>
-  <td height=19 class=xl72 style='height:19.0pt;border-top:none'>20140622</td>
+ <tr height=0 style='display:none'>
+  <td class=xl72 style='border-top:none'>20140622</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
@@ -4454,8 +4454,8 @@ rt
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
  </tr>
- <tr height=19 style='height:19.0pt'>
-  <td height=19 class=xl66 style='height:19.0pt;border-top:none'>奖金</td>
+ <tr height=0 style='display:none'>
+  <td class=xl66 style='border-top:none'>奖金</td>
   <td class=xl76 style='border-top:none;border-left:none;font-size:16.0pt;
   color:#9C6500;font-weight:400;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
@@ -4479,8 +4479,8 @@ rt
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
  </tr>
- <tr height=19 style='height:19.0pt'>
-  <td height=19 class=xl66 style='height:19.0pt;border-top:none'>今日战绩</td>
+ <tr height=0 style='display:none'>
+  <td class=xl66 style='border-top:none'>今日战绩</td>
   <td class=xl76 style='border-top:none;border-left:none;font-size:16.0pt;
   color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
@@ -4504,8 +4504,8 @@ rt
   <td class=xl86 style='border-top:none;border-left:none'>0</td>
   <td class=xl86 style='border-top:none;border-left:none'>0</td>
  </tr>
- <tr height=19 style='height:19.0pt'>
-  <td height=19 class=xl66 style='height:19.0pt;border-top:none'>小结</td>
+ <tr height=0 style='display:none'>
+  <td class=xl66 style='border-top:none'>小结</td>
   <td class=xl76 style='border-top:none;border-left:none;font-size:16.0pt;
   color:#9C6500;font-weight:400;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
@@ -4529,8 +4529,8 @@ rt
   <td class=xl86 style='border-top:none;border-left:none'>0</td>
   <td class=xl86 style='border-top:none;border-left:none'>0</td>
  </tr>
- <tr class=xl71 height=19 style='height:19.0pt'>
-  <td height=19 class=xl69 style='height:19.0pt;border-top:none'>入金</td>
+ <tr class=xl71 height=0 style='display:none'>
+  <td class=xl69 style='border-top:none'>入金</td>
   <td class=xl76 style='border-top:none;border-left:none;font-size:16.0pt;
   color:#9C6500;font-weight:400;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
@@ -4554,9 +4554,8 @@ rt
   <td class=xl70 style='border-top:none;border-left:none'>600</td>
   <td class=xl71 style='border-top:none;border-left:none'>　</td>
  </tr>
- <tr class=xl78 height=19 style='height:19.0pt'>
-  <td height=19 class=xl77 style='height:19.0pt;border-top:none'>比利时 0.0,-0.5 @
-  1.975</td>
+ <tr class=xl78 height=0 style='display:none'>
+  <td class=xl77 style='border-top:none'>比利时 0.0,-0.5 @ 1.975</td>
   <td class=xl78 style='border-top:none;border-left:none;font-size:16.0pt;
   color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
@@ -4580,9 +4579,8 @@ rt
   <td class=xl78 style='border-top:none;border-left:none'>　</td>
   <td class=xl78 style='border-top:none;border-left:none'>　</td>
  </tr>
- <tr class=xl76 height=19 style='height:19.0pt'>
-  <td height=19 class=xl74 style='height:19.0pt;border-top:none'>韩国 0.0, -0.5 @
-  2.150</td>
+ <tr class=xl76 height=0 style='display:none'>
+  <td class=xl74 style='border-top:none'>韩国 0.0, -0.5 @ 2.150</td>
   <td class=xl76 style='border-top:none;border-left:none;font-size:16.0pt;
   color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
@@ -4606,9 +4604,8 @@ rt
   <td class=xl76 style='border-top:none;border-left:none'>　</td>
   <td class=xl76 style='border-top:none;border-left:none'>　</td>
  </tr>
- <tr class=xl78 height=19 style='height:19.0pt'>
-  <td height=19 class=xl77 style='height:19.0pt;border-top:none'>美国 +0.5,+1.0
-  @1.850</td>
+ <tr class=xl78 height=0 style='display:none'>
+  <td class=xl77 style='border-top:none'>美国 +0.5,+1.0 @1.850</td>
   <td class=xl78 style='border-top:none;border-left:none;font-size:16.0pt;
   color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
@@ -4632,9 +4629,8 @@ rt
   <td class=xl78 style='border-top:none;border-left:none'>　</td>
   <td class=xl78 style='border-top:none;border-left:none'>　</td>
  </tr>
- <tr class=xl76 height=19 style='height:19.0pt'>
-  <td height=19 class=xl74 style='height:19.0pt;border-top:none'>比利时
-  &gt;2.0@1.775</td>
+ <tr class=xl76 height=0 style='display:none'>
+  <td class=xl74 style='border-top:none'>比利时 &gt;2.0@1.775</td>
   <td class=xl76 style='border-top:none;border-left:none;font-size:16.0pt;
   color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
@@ -4658,9 +4654,8 @@ rt
   <td class=xl76 style='border-top:none;border-left:none'>　</td>
   <td class=xl76 style='border-top:none;border-left:none'>　</td>
  </tr>
- <tr class=xl76 height=19 style='height:19.0pt'>
-  <td height=19 class=xl74 style='height:19.0pt;border-top:none'>韩国 &lt;2.0 @
-  2.000</td>
+ <tr class=xl76 height=0 style='display:none'>
+  <td class=xl74 style='border-top:none'>韩国 &lt;2.0 @ 2.000</td>
   <td class=xl76 style='border-top:none;border-left:none;font-size:16.0pt;
   color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
@@ -4684,9 +4679,8 @@ rt
   <td class=xl84 style='border-top:none;border-left:none'>-200</td>
   <td class=xl76 style='border-top:none;border-left:none'>　</td>
  </tr>
- <tr class=xl76 height=19 style='height:19.0pt'>
-  <td height=19 class=xl74 style='height:19.0pt;border-top:none'>美国 &lt;2.5 @
-  2.075</td>
+ <tr class=xl76 height=0 style='display:none'>
+  <td class=xl74 style='border-top:none'>美国 &lt;2.5 @ 2.075</td>
   <td class=xl76 style='border-top:none;border-left:none;font-size:16.0pt;
   color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
@@ -4710,9 +4704,8 @@ rt
   <td class=xl84 style='border-top:none;border-left:none'>　</td>
   <td class=xl76 style='border-top:none;border-left:none'>　</td>
  </tr>
- <tr class=xl76 height=19 style='height:19.0pt'>
-  <td height=19 class=xl74 style='height:19.0pt;border-top:none'>比利时
-  &gt;2.0@1.825</td>
+ <tr class=xl76 height=0 style='display:none'>
+  <td class=xl74 style='border-top:none'>比利时 &gt;2.0@1.825</td>
   <td class=xl76 style='border-top:none;border-left:none;font-size:16.0pt;
   color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
@@ -4736,9 +4729,8 @@ rt
   <td class=xl84 style='border-top:none;border-left:none'>-200</td>
   <td class=xl76 style='border-top:none;border-left:none'>　</td>
  </tr>
- <tr class=xl76 height=19 style='height:19.0pt'>
-  <td height=19 class=xl74 style='height:19.0pt;border-top:none'>美国 &lt;2.5 @
-  2.050</td>
+ <tr class=xl76 height=0 style='display:none'>
+  <td class=xl74 style='border-top:none'>美国 &lt;2.5 @ 2.050</td>
   <td class=xl76 style='border-top:none;border-left:none;font-size:16.0pt;
   color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
@@ -4832,6 +4824,162 @@ rt
   <td class=xl67 style='border-top:none;border-left:none'>203.34</td>
   <td class=xl67 style='border-top:none;border-left:none'>8.9</td>
   <td class=xl67 style='border-top:none;border-left:none'>0</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+ </tr>
+ <tr height=19 style='height:19.0pt'>
+  <td height=19 class=xl105 style='height:19.0pt'>荷兰@2.62</td>
+  <td class=xl67 style='border-top:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>-200</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+ </tr>
+ <tr height=19 style='height:19.0pt'>
+  <td height=19 class=xl105 style='height:19.0pt'>克罗地亚@2.80</td>
+  <td class=xl67 style='border-top:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>-200</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+ </tr>
+ <tr height=19 style='height:19.0pt'>
+  <td height=19 class=xl66 style='height:19.0pt'>克罗地亚 平局 @3.40</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>-100</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+ </tr>
+ <tr height=19 style='height:19.0pt'>
+  <td height=19 class=xl66 style='height:19.0pt;border-top:none'>西班牙 -1.0,-1.5
+  @ 1.925</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>-200</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+ </tr>
+ <tr height=19 style='height:19.0pt'>
+  <td height=19 class=xl66 style='height:19.0pt;border-top:none'>荷兰 0.0 @ 1.950</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>-200</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+ </tr>
+ <tr height=19 style='height:19.0pt'>
+  <td height=19 class=xl66 style='height:19.0pt;border-top:none'>巴西 -2.0,-2.5 @
+  1.900</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>-200</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+ </tr>
+ <tr height=19 style='height:19.0pt'>
+  <td height=19 class=xl66 style='height:19.0pt;border-top:none'>智利 0.0 @ 1.975</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>-290</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
  </tr>
 </table>
