--- a/wc/index.files/sheet001.htm
+++ b/wc/index.files/sheet001.htm
@@ -36,10 +36,10 @@ rt
 
 <body link=blue vlink=purple class=xl67>
 
-<table border=0 cellpadding=0 cellspacing=0 width=1582 style='border-collapse:
- collapse;table-layout:fixed;width:1582pt'>
- <col class=xl66 width=201 style='mso-width-source:userset;mso-width-alt:8576;
- width:201pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=1620 style='border-collapse:
+ collapse;table-layout:fixed;width:1620pt'>
+ <col class=xl66 width=239 style='mso-width-source:userset;mso-width-alt:10197;
+ width:239pt'>
  <col class=xl67 width=66 style='mso-width-source:userset;mso-width-alt:2816;
  width:66pt'>
  <col class=xl67 width=65 style='mso-width-source:userset;mso-width-alt:2773;
@@ -66,8 +66,8 @@ rt
  3968;width:93pt'>
  <col class=xl67 width=65 span=6 style='width:65pt'>
  <tr height=31 style='mso-height-source:userset;height:31.0pt'>
-  <td colspan=2 height=31 class=xl103 width=267 style='border-right:.5pt solid black;
-  height:31.0pt;width:267pt'>最后更新</td>
+  <td colspan=2 height=31 class=xl103 width=305 style='border-right:.5pt solid black;
+  height:31.0pt;width:305pt'>最后更新</td>
   <td colspan=3 class=xl100 width=223 style='border-right:.5pt solid black;
   border-left:none;width:223pt'>20140623_2238</td>
   <td class=xl67 width=92 style='border-left:none;width:92pt'>　</td>
@@ -4970,6 +4970,29 @@ rt
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>-290</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+ </tr>
+ <tr height=19 style='height:19.0pt'>
+  <td height=19 class=xl66 style='height:19.0pt;border-top:none'>西班牙荷兰克罗地亚巴西4串1@
+  12.3861</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>-100</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
